// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validate-media-update should handle validation for non-existent media 1`] = `
{
  "content": [
    {
      "text": "{"type":"Error","title":"The content could not be found","status":404,"operationStatus":"NotFound"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;

exports[`validate-media-update should validate a valid media update 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;
